Chore: 버전 업데이트 & Swagger
